# Saturn

./: .gitignore  README.md  update_saturn_code.sh
FPGA/: .gitignore  README.md  bdtest.tcl  bdtestprom.prm  build.bat  create_saturn_project.tcl  prom.prm  saturn_project.tcl  saturn_top_wrapper.dcp  saturngolden.prm  saturnprimary.prm  saturnprimary2023V10.prm  saturnprimary2023V11.prm  saturnprimary2023V12.prm  saturnprimary2023V9.prm  saturnprom.prm
Update-webserver-setup/: README.md  configure_apache.sh  create_files.sh  install_deps.sh  install_deps_buster.sh  setup_saturn_webserver.sh  start_server.sh  start_server_buster.sh  update-G2.py  update-pihpsdr.py
autostart files/: g2-autostart-p2app.desktop  g2-shutdown.desktop
autostart-files/: g2-autostart-piHPSDR.desktop  g2-shutdown-trixie.desktop  g2-shutdown.desktop
desktop/: AXIReaderWriter  Audiotest  Flashwriter  P2app  P2app.desktop  SaturnUpdateManager.desktop  Update-piHPSDR  Update-piHPSDR-ui  Update.G2  alacarte-made.desktop  biascheck  flashwriter  git-cola  p2app
linuxdriver/: readme.txt
project_documentation/: CW TX on RX port.docx  Raspberry Pi Control App Actions.docx  Raspberry Pi Setup.docx  Saturn Development Activities.docx  Saturn mini desktop apps.docx  USB serial devices.docx  encoder step table.xlsx  programming FPGA config prom for the 1st time.docx  protocol 2 data transder.docx  (+1 more)
update_manager/rust-server/: Cargo.toml
update_manager/rust-server/src/: auth.rs  clone.rs  image.rs  main.rs  middleware.rs  monitor.rs  pages.rs  repair.rs  state.rs  update.rs  util.rs
(+1209 files in other folders)
